--- a/templates/loglan/account_confirmed.html
+++ b/templates/loglan/account_confirmed.html
@@ -1,5 +1,15 @@
 {% extends 'loglan/header_footer.html' %}
 
 {% block content %}
-<h2>Your Loglan account's is confirmed and active, please <a href="{% url 'loglan:login' %}">login</a> to start learning.</h2>
+
+<div class="row">
+  <div class="container-fluid yoga-minimal-tinggi-halaman">
+    <div id="yoga-panel-tentang-daftar-biru-tua">
+      <div id="yoga-padding-sukses-daftar">
+      <h2>Konfirmasi akun Log-Lan Anda sudah berhasil dan sudah aktif, silahkah <a href="{% url 'loglan:login' %}">masuk</a> untuk mulai belajar.</h2>
+    </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
