--- a/templates/loglan/help.html
+++ b/templates/loglan/help.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container yoga-background-bantuan">
   <div class="col-md-0"></div>
   <div class="col-md-12">
     <div class="row text-center">
-      <h2>BANTUAN</h2>
+      <h3>BANTUAN</h3>
       <hr id="yoga-border-bantuan"></hr>
     </div>
     <div class="row text-left">
@@ -39,14 +39,10 @@
       <ol>
         <li>Kuis hanya bisa dikerjakan setelah menyelesaikan semua materi yang diberikan sesuai level belejar terkait.</li>
         <li>Silahkan pilih level Kuis yang akan dikerjakan, Basic atau Intermediate.</li>
-        <li>Kuis yang diberikan berupa program sesuai materi dari level terkait.</li>
-        <li>Silahkan baca instruksi dan kerjakan program kuis.</li>
-        <li>Ketik kode program Anda pada <i>text editor</i> yang telah disediakan.</li>
-        <li>Klik "Jalankan" untuk melihat apakah kode program Anda benar atau salah.</li>
-        <li>Kesempatan menjawab satu soal kuis hanya sekali.</li>
-        <li>Silahkan klik "Selanjutnya" untuk mencoba menjawab kuis selanjutnya.</li>
-        <li>Setelah mengerjakan semua kuis yang diberikan, maka hasil kuis dan perolehan poin kuis Anda akan ditampilkan.</li>
-        <li>Jika Anda belum puas dengan perolehan poin kuis saat ini, silahkan mencoba kuis kembali hingga mencapai poin maksimal kuis dan untuk mrningkatkan peringkat Anda.</li>
+        <li>Kuis yang diberikan dalam bentuk pilihan ganda.</li>
+        <li>Silahkan baca pertanyaan dan pilih jawaban yang menurut Anda benar.</li>
+        <li>Satu sesi kuis hanya diberikan kesempatan menjawab satu kali.</li>
+        <li>Jika belum puas dengan hasil kuis, Anda bisa mencoba kuis kembali untuk memperbaiki nilai poin kuis.</li>
       </ol>
       <hr id="yoga-border-bantuan"></hr>
 
