--- a/templates/loglan/signup.html
+++ b/templates/loglan/signup.html
@@ -6,7 +6,7 @@
     window.location = "{% url 'loglan:user_main_page' %}";
   {% endif %}
 </script>
-<div class="container">
+<div class="container yoga-minimal-tinggi-halaman">
   <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4 col-sm-4 col-xs-12">
@@ -18,7 +18,7 @@
             </div>
             {{form.as_p}}
             <div class="form-group text-center">
-              <button type="submit" class="btn btn-default yoga-button-transparent" value="Register">Sign Up</button>
+              <button type="submit" class="btn btn-default yoga-button-transparent" value="Register">Daftar</button>
             </div>
           </form>
         </div>
