--- a/templates/loglan/signup_succes.html
+++ b/templates/loglan/signup_succes.html
@@ -1,5 +1,15 @@
 {% extends 'loglan/header_footer.html' %}
 
 {% block content %}
-<h2>Your signup is succes </h2>
+
+<div class="row">
+  <div class="container-fluid yoga-minimal-tinggi-halaman">
+    <div id="yoga-panel-tentang-daftar-biru-tua">
+      <div id="yoga-padding-tentang-daftar">
+      <h2 class="text-center">Daftar akun Log-Lan Anda sudah berhasil, untuk aktifasi akun silahkan konfirmasi melalui pesan email Log-Lan di email yang Anda daftarkan.</h2>
+    </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
