--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,7 +7,7 @@
   {% endif %}
 </script>
 
-<div class="container">
+<div class="container yoga-minimal-tinggi-halaman">
   <div class="row">
 
     <div class="col-md-4"></div>
@@ -29,9 +29,9 @@
             <div class="form-group text-center">
               <button type="submit" name="login" class="btn btn-default yoga-button-transparent">Masuk</button>
             </div>
-            <div class="form-group text-center yoga-text-white">
+            <!-- <div class="form-group text-center yoga-text-white">
               <a href="" id="yoga-lupa-kata-sandi">Lupa kata sandi ?</a>
-            </div>
+            </div> -->
           </form>
         </div>
       </div>
