--- a/templates/loglan/choose_level.html
+++ b/templates/loglan/choose_level.html
@@ -1,35 +1,62 @@
 {% extends 'loglan/header_footer.html' %}
 
+{% load course lock %}
+
 {% block content %}
-<div class="container">
 
-    <div class="col-md-2"></div>
+<div class="container yoga-minimal-tinggi-halaman">
 
-    {% for course in courses %}
-    <div class="col-md-4 col-sm-4 col-xs-12">
-      <div class="panel panel-default yoga-panel">
-        <div class="panel-body">
+  {% for course in courses %}
+  <div class="row" id="yoga-margin-panel-pilih-level">
+  <div class="col-md-2"></div>
+
+
+  <div class="col-md-8 col-sm-8 col-xs-12 yoga-panel-level-python">
+      <div class="row">
+        <div class="col-md-4">
+          <h3 class=yoga-panel-title>{{ course.course_name }}</h3>
+        </div>
+        <div class="col-md-8 text-left yoga-panel-level-python-abu-abu">
+          {{course.course_description}}
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+        <!-- kasih if kalau pernah ngerjain, mulai dari id terakhir dia ngerjain-->
           <form method="POST" action="#">
-            <div class="form-group text-center">
-              <h3 class=yoga-panel-title>{{ course.course_name }}</h3>
-            </div>
-            <div class="form-group text-center">
-              <!-- kasih if kalau pernah ngerjain, mulai dari id terakhir dia ngerjain-->
-              {% with course.course_parts.all|first as first_part %}
-                <a href="{% url 'loglan:course_part_detail' course_slug=course.course_slug id_part_course=first_part.id %}" type="submit" name="course" class="btn btn-default yoga-button-transparent">Materi</a>
-              {% endwith %}
-            </div>
-            <div class="form-group text-center">
-              {% with course.quiz.quiz_parts.all|first as first_part %}
-                <a href="{% url 'loglan:quiz_part_detail' course_slug=course.course_slug id_part_quiz=first_part.id %}" type="submit" name="quiz" class="btn btn-default yoga-button-transparent">Kuis</a>
-              {% endwith %}
-            </div>
+          {% last_taken_part request.user course as last_part %}
+          {% if last_part %}
+            <a href="{% url 'loglan:course_part_detail' course_slug=course.course_slug number_part_course=last_part.number %}" class="btn btn-default" id="yoga-button-belajar">Materi</a>
+          {% else %}
+            <a href="{% url 'loglan:course_part_detail' course_slug=course.course_slug number_part_course=1 %}" class="btn btn-default" id="yoga-button-belajar">Materi</a>
+          {% endif %}
+          </form>
+        </div>
+        <div class="col-md-6">
+          <form method="POST" action="#">
+          {% with course.quiz.quiz_parts.all|first as first_part %}
+            <a href="{% url 'loglan:quiz_part_detail' course_slug=course.course_slug number_part_quiz=first_part.number %}"
+            class="btn btn-default {% quiz_lock request.user course %}" id="yoga-button-belajar">Kuis</a>
+          {% endwith %}
           </form>
         </div>
       </div>
     </div>
-    {% endfor %}
 
-    <div class="col-md-2"></div>
+  <div class="col-md-2"></div>
+
+  <!-- <div class="row"></br></br></br></div> -->
+  </div>
+  {% endfor %}
 </div>
+
+<script>
+  $('.locked').click(function( event ) {
+    event.preventDefault();
+    alert('Kuis ini masih dikunci, silahkan selesaikan materi untuk kuis ini terlebih dahulu.');
+  });
+</script>
+
+
 {% endblock %}
