--- a/templates/loglan/course_part_detail.html
+++ b/templates/loglan/course_part_detail.html
@@ -1,9 +1,11 @@
 {% extends 'loglan/header_footer.html' %}
+
+{% load lock %}
+
 {% block content %}
 
 <script type="text/javascript">
-// output functions are configurable.  This one just appends some text
-// to a pre element.
+
 function outf(text) {
   var mypre = document.getElementById("output");
   mypre.innerHTML = mypre.innerHTML + text;
@@ -15,11 +17,6 @@ function builtinRead(x) {
   return Sk.builtinFiles["files"][x];
 }
 
-// Here's everything you need to run a python program in skulpt
-// grab the code from your textarea
-// get a reference to your pre element for output
-// configure the output function
-// call Sk.importMainWithBody()
 function runit() {
   var prog = document.getElementById("yourcode").value;
   var mypre = document.getElementById("output");
@@ -30,29 +27,68 @@ function runit() {
     return Sk.importMainWithBody("<stdin>", false, prog, true);
   });
   myPromise.then(function(mod) {
-    console.log('success');
+    cek_jawaban();
+    console.log('success compile');
   },
   function(err) {
     console.log(err.toString());
   });
 }
+
+function cek_jawaban() {
+  console.log("Sedang memeriksa kode program Anda.")
+  var jawaban = $('#output').text();
+  var console_user = $('#yourcode').val();
+    $.ajax({
+      url : "{% url 'loglan:cek_jawaban'%}",
+      type : "POST",
+      data : { jawaban : jawaban, user_id: {{request.user.id}}, course_part_id: {{course_part.id}}, console_user : console_user, csrfmiddlewaretoken: '{{ csrf_token }}' },
+      success : function(json) {
+        console.log(json);
+        $('#hasil-jawaban').text(json.hasil_jawaban);
+        console.log(json);
+        console.log("success cek jawaban");
+        if (json.hasil_jawaban=="Kode program Anda benar"){
+          // if (json.course_part.next_part is null){
+          //   $('#button-next').replaceWith('<a href="{% url 'loglan:course_part_result' course_slug=course_part.course.course_slug %}"><button type="button" class="btn btn-default" id="yoga-button-belajar">Lihat hasil belajar</button></a>');
+          // }
+          // else{
+            $('#button-next').replaceWith('<a id="button-next" href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug number_part_course=course_part.next_part.number%}" class="{% part_lock request.user course_part %}"><button type="button" class="btn btn-default" id="yoga-button-belajar">Selanjutnya</button></a>');
+          // }
+        }
+      },
+      error : function(xhr,errmsg,err) {
+        $('#results').html("<div class='alert-box alert radius' data-alert>Oops! We have encountered an error: "+errmsg+" <a href='#' class='close'>&times;</a></div>");
+        console.log(xhr.status + ": " + xhr.responseText);
+      }
+    });
+  }
+
 </script>
 
-<div class="container-fluid">
 
-  <div class="row" id="yoga-row-pertama-course" >
-    <div class="col-md-6" id="yoga-padding-menu-course">
-      <a href="#" class="fa fa-keyboard-o" id="yoga-menu-course"> Belajar</a>
-      <a href="{% url 'loglan:course_part_list' course_slug=course_part.course.course_slug %}" class="fa fa-list" id="yoga-menu-course"> Daftar Materi</a>
+
+<div class="container-fluid yoga-minimal-tinggi-halaman">
+
+  <div class="row yoga-background-biru-tua" id="yoga-row-pertama-course" >
+    <div class="col-md-6" id="yoga-jarak-menu-course">
+      <div class="col-md-4">
+        <a href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug number_part_course=course_part.number %}" class="btn btn-default" id="yoga-button-belajar"> Belajar</a>
+      </div>
+      <div class="col-md-4">
+        <a href="{% url 'loglan:course_part_list' course_slug=course_part.course.course_slug %}" class="btn btn-default" id="yoga-button-belajar"> Daftar Materi</a>
+      </div>
+      <div class="col-md-2"></div>
+      <div class="col-md-2"></div>
     </div>
-    <div class="col-md-6 text-right">
-      <h4>+10 point</h4>
+    <div class="col-md-6 text-right yoga-poin-course-detail">
+      <h4 style="font-size:24px;">+ {{course_part.course_point}} poin</h4>
     </div>
   </div>
 
-  <div class="row" id="yoga-row-kedua-course">
-    <div class="col-md-12" id="">
-      <div class="progress"> <!-- Bootstrap Progress Bar -->
+  <div class="row yoga-background-biru-tua">
+    <div class="col-md-12">
+      <div class="progress" id="yoga-progres-course-detail">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
           50% Complete
         </div>
@@ -60,49 +96,66 @@ function runit() {
     </div>
   </div>
 
-  <div class="row">
-
-    <div class="col-md-6 text-left">
-      <textarea cols="90" rows="33">{{ course_part.content }}</textarea>
-    </div>
-
+  <div class="row" id="yoga-background-course">
     <div class="col-md-6">
-      <div class="text-right">
-        <textarea cols="90" rows="15" id="yourcode"></textarea>
-        <button type="button" onclick="runit()" class="btn btn-primary" id="yoga-button-course">Jalankan</button>
-        <textarea cols="90" rows="10" id="output"></textarea>
-        <div id="yoga-notifikasi-hasil-program" class="text-left">
-          <span>Program Anda sudah benar, silahkan menuju materi selanjutnya</span>
-        </div>
-        <div class="row" id="yoga-button-course">
-          <div class="col-md-6">
-            <div class="text-left">
-              {% if course_part.previous_part %}
-
-                <a href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug id_part_course=course_part.previous_part.id%}">
-                  <button type="button" class="btn btn-primary" id="yoga-margin-button-sebelumnya">Sebelumnya</button>
-                </a>
-              {% endif %}
-
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="text-right">
-              {% if course_part.next_part %}
-              <a href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug id_part_course=course_part.next_part.id%}">
-                <button type="button" class="btn btn-primary">Selanjutnya</button>
-              </a>
-              {% else%}
-              <!--  tombol ke list materi -->
-              {% endif %}
-            </div>
-          </div>
-        </div>
+      <div class="yoga-tempat-materi">
+        <h3><strong>{{ course_part.course_part_name|safe }}</strong></h3>
+        {{ course_part.course_content|safe }}
+        {{ course_part.course_example|safe }}
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div id="yoga-panel-teks-editor">
+        <textarea cols="90" rows="12" id="yourcode"></textarea>
+        <button type="button" onclick="runit()" class="btn btn-default" id="yoga-button-jalankan">Jalankan</button>
+      </div>
+      <div class="yoga-output-program" id="output"></div>
+      <div class="yoga-notifikasi-hasil-program text-center">
+        <p id="hasil-jawaban"></p>
       </div>
     </div>
   </div>
 
+  <div class="row" id="yoga-panel-button-belajar">
+    <div class="col-md-4"></div>
+    <div class="col-md-4" id="yoga-margin-panel-button-selanjutnya-sebelumnya">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="text-left">
+            {% if course_part.previous_part %}
+              <a href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug number_part_course=course_part.previous_part.number%}">
+                <button type="button" class="btn btn-default" id="yoga-button-belajar">Sebelumnya</button>
+              </a>
+            {% endif %}
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="text-right">
+            {% if course_part.next_part %}
+              <a id="button-next" href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug number_part_course=course_part.next_part.number%}" class="{% part_lock request.user course_part %}">
+                <button type="button" class="btn btn-default" id="yoga-button-belajar">Selanjutnya</button>
+              </a>
+            {% else%}
+              <a href="{% url 'loglan:course_part_result' course_slug=course_part.course.course_slug %}">
+                <button type="button" class="btn btn-default" id="yoga-button-belajar">Lihat hasil belajar</button>
+              </a>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4"></div>
+  </div>
+
+</div>
+
+<div id="js-hasil-jawaban">
+  <script>
+    $('.locked').click(function( event ) {
+      event.preventDefault();
+      alert('Silahkan mengerjakan part ini terlebih dahulu sampai benar.');
+    });
+  </script>
 </div>
 
 {% endblock %}
