--- a/templates/loglan/quiz_part_detail.html
+++ b/templates/loglan/quiz_part_detail.html
@@ -1,57 +1,74 @@
 {% extends 'loglan/header_footer.html' %}
 
 {% block content %}
-<div class="container-fluid">
-  <div class="row" id="yoga-row-pertama-course" >
-    <div class="text-center">
-      <h4>+10 point</h4>
-    </div>
-  </div>
-
-  <div class="row" id="yoga-row-kedua-course">
-    <div class="col-md-12" id="">
-      <div class="progress"> <!-- Bootstrap Progress Bar -->
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
-          50% Complete
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="container-fluid yoga-background-kuis">
 
   <div class="row">
-
-    <div class="col-md-6 text-left">
-      <textarea cols="90" rows="33">{{quiz_part.quiz_challenge}}</textarea>
+    <div class="col-md-12 yoga-panel-soal-kuis text-center">
+      <p class="text-center" style="font-size:32px; ">{{ quiz_part.quiz_content}}</p>
     </div>
+  </div>
+<form  method="POST">
+  {% csrf_token %}
+  <div class="row yoga-panel-pilihan-kuis">
+    <div class="row yoga-pilihan-ganda">
 
-    <div class="col-md-6">
-      <div class="text-right">
-        <textarea cols="90" rows="15" id="yourcode"></textarea>
-        <button type="button" onclick="runit()" class="btn btn-primary" id="yoga-button-course">Jalankan</button>
-        <textarea cols="90" rows="10" id="output"></textarea>
-        <div id="yoga-notifikasi-hasil-program" class="text-left">
-          <span>Program Anda sudah benar, silahkan menuju materi selanjutnya</span>
+      {% for answer in quiz_part.quiz_part_answers.all %}
+        <div class="col-md-6 yoga-button-pilihan-ganda">
+          <input type="radio" name="piljan" value="{{answer.id}}"></input>
+          <button type="button" class="btn btn-default ">{{answer.text_answer}}</button>
         </div>
-        <div class="row" id="yoga-button-course">
-          <div class="col-md-6">
-            <div class="text-left">
-              <a href="#">
-                <button type="button" class="btn btn-primary" id="yoga-margin-button-sebelumnya">Sebelumnya</button>
-              </a>
-            </div>
-          </div>
+      {% endfor %}
 
-          <div class="col-md-6">
-            <div class="text-right">
-              <a href="#">
-                <button type="button" class="btn btn-primary">Selanjutnya</button>
-              </a>
-            </div>
+    </div>
+    <input type="submit" value="Submit jawaban"></input>
+</form>
+
+  </div>
+
+  <div class="row" id="yoga-panel-button-belajar">
+    <div class="col-md-4"></div>
+    <div class="col-md-4" id="yoga-margin-panel-button-selanjutnya-sebelumnya">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+          <div class="text-center">
+            <!-- {% if course_part.next_part %} -->
+            <!-- <a id="button-next" href="#">
+              <button type="button" class="btn btn-default" id="yoga-button-belajar">Selanjutnya</button>
+            </a> -->
+            <!-- {% else%} -->
+
+            {% if quiz_part.next_quiz %}
+            <a href="{% url 'loglan:quiz_part_detail' course_slug=quiz_part.course_part.course.course_slug number_part_quiz=quiz_part.next_quiz.number %}">
+              <button type="button" class="btn btn-default" id="yoga-button-belajar">Kuis Selanjutnya</button>
+            </a>
+            {% endif %}
+            <!-- {% endif %} -->
           </div>
         </div>
+        <div class="col-md-3"></div>
       </div>
     </div>
+    <div class="col-md-4"></div>
   </div>
 
 </div>
+
+<script>
+/*
+* Shuffle jQuery array of elements - see Fisher-Yates algorithm
+*/
+jQuery.fn.shuffle = function () {
+    var j;
+    for (var i = 0; i < this.length; i++) {
+        j = Math.floor(Math.random() * this.length);
+        $(this[i]).before($(this[j]));
+    }
+    return this;
+};
+$('.yoga-button-pilihan-ganda').shuffle();
+
+
+</script>
 {% endblock %}
