--- a/templates/loglan/user_main_page.html
+++ b/templates/loglan/user_main_page.html
@@ -1,26 +1,115 @@
 {% extends 'loglan/header_footer.html' %}
 
+{% load static %}
+
+{% load course %}
+
 {% block content %}
-<div class="container">
 
-    <div class="col-md-4"></div>
+<script>
+{% if not user.is_authenticated %}
+window.location = "{% url 'loglan:login' %}";
+{% endif %}
+</script>
 
-    <div class="col-md-4 col-sm-4 col-xs-12">
-      <div class="panel panel-default yoga-panel">
-        <div class="panel-body">
-          <form method="POST" action="#">
-            <div class="form-group text-center">
-              <h3 class=yoga-panel-title>Python</h3>
-            </div>
-            <div class="form-group text-center">
-              <a href="{% url 'loglan:choose_level' %}" type="submit" name="course" class="btn btn-default yoga-button-transparent">Mulai Belajar</a>
-            </div>
-          </form>
+<div class="container-fluid yoga-minimal-tinggi-halaman">
+
+  <div class="col-md-6 col-sm-6 col-xs-12">
+    <div class="col-md-2"></div>
+    <div class="col-md-8 yoga-panel-python-halaman-user">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="{% static 'image/pythonlogo.png'%}" width="128"/>
+        </div>
+        <div class="col-md-8 text-left yoga-panel-mulai-belajar-abu-abu">
+          <h3 class="yoga-penjelasan-python">Python</h3>
+          <p>Anda akan belajar dalam level Basic dan Intermediete</p>
+        </div>
+      </div>
+      <div class="row" id="yoga-panel-penjelasan-putih">
+        <dd class="text-justify">  Python adalah bahasa pemrograman interpretatif multiguna, mudah dipelajari karena menerapkan
+          filosofi perancangan yang berfokus pada tingkat keterbacaan kode, dimana sintaksis kode sederhana dan memiliki dokumentasi yang lengkap.</dd>
+      </div>
+      <div class="row">
+        <form method="POST" action="#">
+          <div class="text-center">
+            <a href="{% url 'loglan:choose_level' %}" type="submit" name="course" class="btn btn-default" id="yoga-button-belajar">Mulai Belajar</a>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+
+  <div class="col-md-6 col-sm-6 col-xs-12 yoga-panel-profil-halaman-user">
+
+    <div class="row text-center yoga-panel-toska-profil-halaman-user">
+      <div class="row yoga-judul-profil-halaman-user">
+        <div class="col-md-4">
+          User
+        </div>
+        <div class="col-md-4">
+          Jumlah Poin
+        </div>
+        <div class="col-md-4">
+          Peringkat
         </div>
       </div>
     </div>
 
-    <div class="col-md-4"></div>
+    <div class="row text-center yoga-panel-biru-profil-halaman-user">
+      <div class="row yoga-isi-profil-halaman-user">
+        <div class="col-md-4">
+          {{request.user.username}}
+        </div>
+        <div class="col-md-4">
+          {{request.user.user_profile.user_course_point}}
+        </div>
+        <div class="col-md-4">
+          1
+        </div>
+      </div>
+    </div>
+
+    </br>
+
+    {% for course_taken in course_taken %}
+    <div class="row yoga-panel-biru-progres-bar-halaman-user">
+      <div class="text-center yoga-judul-level-progres-bar">
+        Basic
+      </div>
+      <div class="row yoga-panel-toska-progres-bar-halaman-user">
+        <div class="col-md-2 yoga-isi-progres">
+          Materi
+        </div>
+        <div class="col-md-8">
+          <div class="progress yoga-progres-bar-halaman-user">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
+              50%
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 yoga-isi-progres text-center">
+          {% user_course_point_per_level request.user course_taken.course.id %} poin
+        </div>
+      </div>
+
+      <div class="row yoga-panel-toska-progres-bar-halaman-user">
+        <div class="col-md-2 yoga-isi-progres">
+          Kuis
+        </div>
+        <div class="col-md-8 text-center yoga-isi-progres">
+          poin
+        </div>
+        <div class="col-md-2"></div>
+      </div>
+    </div>
+
+    </br>
+
+    {% endfor %}
+
+  </div>
 
 </div>
 {% endblock %}
