--- a/loglan/static/css/yoga-styles.css
+++ b/loglan/static/css/yoga-styles.css
@@ -147,10 +147,8 @@ p a{
   color: white;
   font-size: 20px;
   width: 100%;
-  height: 200px;
-}
-.yoga-pilihan-ganda input[type="radio"]:checked{
-  background-color: #fff;
+  height: 100px;
+  margin-bottom: 10px;
 }
 
 .yoga-button-pilihan-ganda:hover,
@@ -158,6 +156,18 @@ p a{
 .yoga-button-pilihan-ganda:focus{
   background-color: #27666E;
   border-color: #27666E;
+  color: white;
+}
+
+.yoga-button-pilihan-ganda-baru{
+  background-color: #27666E;
+  border-color: #27666E;
+  border-radius: 0;
+  color: white;
+  font-size: 20px;
+  width: 100%;
+  height: 100px;
+  margin-bottom: 10px;
 }
 
 #yoga-title{
@@ -448,6 +458,24 @@ p a{
   min-height: 783px;
   margin-top: -20px;
   color: white;
+}
+
+.yoga-radio-pilihan{
+  visibility:hidden;
+}
+
+#yoga-row-radio-pilihan-ganda{
+  margin: 30px 0;
+}
+
+#yoga-jumlah-poin-course-user{
+  height: 100%;
+  background-color: #74ECFC;
+  border-color: #74ECFC;
+  color: #152B39;
+  margin-right: -55px;
+  margin-left: 55px;
+  border-radius: 1%;
 }
 /*================================================================= carousel ====================================================================*/
 
