--- a/templates/loglan/course_part_detail.html
+++ b/templates/loglan/course_part_detail.html
@@ -2,6 +2,8 @@
 
 {% load lock %}
 
+{% load course %}
+
 {% block content %}
 
 <script type="text/javascript">
@@ -49,12 +51,7 @@ function cek_jawaban() {
         console.log(json);
         console.log("success cek jawaban");
         if (json.hasil_jawaban=="Kode program Anda benar"){
-          // if (json.course_part.next_part is null){
-          //   $('#button-next').replaceWith('<a href="{% url 'loglan:course_part_result' course_slug=course_part.course.course_slug %}"><button type="button" class="btn btn-default" id="yoga-button-belajar">Lihat hasil belajar</button></a>');
-          // }
-          // else{
             $('#button-next').replaceWith('<a id="button-next" href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug number_part_course=course_part.next_part.number%}" class="{% part_lock request.user course_part %}"><button type="button" class="btn btn-default" id="yoga-button-belajar">Selanjutnya</button></a>');
-          // }
         }
       },
       error : function(xhr,errmsg,err) {
@@ -82,15 +79,23 @@ function cek_jawaban() {
       <div class="col-md-2"></div>
     </div>
     <div class="col-md-6 text-right yoga-poin-course-detail">
-      <h4 style="font-size:24px;">+ {{course_part.course_point}} poin</h4>
+      <div class="col-md-6"></div>
+      <div class="col-md-6">
+        <div class="col-md-6 text-center" id="yoga-jumlah-poin-course-user">
+          <h4 style="font-size:24px;"> {% user_course_point_per_level request.user course_part.course.id %} poin</h4>
+        </div>
+        <div class="col-md-6">
+          <h4 style="font-size:24px;">+ {{course_part.course_point}} poin</h4>
+        </div>
+      </div>
     </div>
   </div>
 
   <div class="row yoga-background-biru-tua">
     <div class="col-md-12">
       <div class="progress" id="yoga-progres-course-detail">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%">
-          50% Complete
+        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{% user_course_progress_per_level request.user course_part.course.id %}%">
+          {% user_course_progress_per_level request.user course_part.course.id %} %
         </div>
       </div>
     </div>
